# pinky

./: CLAUDE.md  Dockerfile  README.md  compose.yaml  main.py  pyproject.toml
docs/: vision.md
docs/adrs/: 0001-record-architecture-decisions.md
static/: index.html
